<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textview_ticket_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ticket_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/text_margin_right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/ticket_car_license" />

        <EditText
            android:id="@+id/car_license"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:imeOptions="flagNoExtractUi"
            android:textSize="@dimen/ticket_details_font_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

        <TextView
            android:id="@+id/vehicle_color_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/ticket_car_color" />

        <Spinner
            android:id="@+id/car_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:prompt="@string/car_color_prompt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vehicle_type_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/ticket_car_type" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radiogroup_vehicle_type1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiobutton_big_bus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_big_bus"
                    android:textSize="@dimen/ticket_details_font_size" />

                <RadioButton
                    android:id="@+id/radiobutton_small_bus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_small_bus"
                    android:textSize="@dimen/ticket_details_font_size" />

                <RadioButton
                    android:id="@+id/radiobutton_big_truck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_big_truck"
                    android:textSize="@dimen/ticket_details_font_size" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radiogroup_vehicle_type2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiobutton_small_truck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_small_truck"
                    android:textSize="@dimen/ticket_details_font_size" />

                <RadioButton
                    android:id="@+id/radiobutton_motorcycle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_motorcycle"
                    android:textSize="@dimen/ticket_details_font_size" />

                <RadioButton
                    android:id="@+id/radiobutton_other_car_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radiobutton_other_car_type"
                    android:textSize="@dimen/ticket_details_font_size" />
            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.7"
            android:text="@string/ticket_license_color" />

        <RadioGroup
            android:id="@+id/radiogroup_license_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_yellow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="@color/yellow"
                android:text="@string/radiobutton_yellow"
                android:textSize="@dimen/ticket_details_font_size" />

            <RadioButton
                android:id="@+id/radiobutton_blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="@color/blue"
                android:text="@string/radiobutton_blue"
                android:textColor="@color/white"
                android:textSize="@dimen/ticket_details_font_size" />

            <RadioButton
                android:id="@+id/radiobutton_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="@color/black"
                android:text="@string/radiobutton_black"
                android:textColor="@color/white"
                android:textSize="@dimen/ticket_details_font_size" />

            <RadioButton
                android:id="@+id/radiobutton_other_license_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="@color/green"
                android:text="@string/radiobutton_other_license_color"
                android:textSize="@dimen/ticket_details_font_size" />

        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticket_parking_time" />

        <EditText
            android:id="@+id/ticket_dateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:imeOptions="flagNoExtractUi"
            android:textSize="@dimen/ticket_details_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticket_parking_address" />

        <EditText
            android:id="@+id/ticket_parking_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:imeOptions="flagNoExtractUi"
            android:textSize="@dimen/ticket_details_font_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_ticket_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticket_police" />

        <EditText
            android:id="@+id/ticket_police"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:imeOptions="flagNoExtractUi"
            android:textSize="@dimen/ticket_details_font_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6" />

        <EditText
            android:id="@+id/ticket_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:imeOptions="flagNoExtractUi"
            android:textSize="@dimen/ticket_details_font_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticket_year" />


        <EditText
            android:id="@+id/ticket_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:imeOptions="flagNoExtractUi"
            android:textSize="@dimen/ticket_details_font_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticket_month" />

        <EditText
            android:id="@+id/ticket_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:imeOptions="flagNoExtractUi"
            android:textSize="@dimen/ticket_details_font_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticket_day" />
    </LinearLayout>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="left"-->
    <!--android:layout_margin="10dp"-->
    <!--android:text="@string/ticket_sub_description" />-->


</LinearLayout>