<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/prompt_title_margin"
        android:text="@string/vehicle_type_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/prompt_radio_button_margin"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radiogroup_vehicle_type1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_big_bus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_big_bus"
                android:textSize="@dimen/ticket_details_font_size" />

            <RadioButton
                android:id="@+id/radiobutton_small_bus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_small_bus"
                android:textSize="@dimen/ticket_details_font_size" />

            <RadioButton
                android:id="@+id/radiobutton_big_truck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_big_truck"
                android:textSize="@dimen/ticket_details_font_size" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radiogroup_vehicle_type2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_small_truck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_small_truck"
                android:textSize="@dimen/ticket_details_font_size" />

            <RadioButton
                android:id="@+id/radiobutton_motorcycle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_motorcycle"
                android:textSize="@dimen/ticket_details_font_size" />

            <RadioButton
                android:id="@+id/radiobutton_other_car_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radiobutton_other_car_type"
                android:textSize="@dimen/ticket_details_font_size" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>