<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/prompt_title_margin"
        android:text="@string/license_color_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radiogroup_license_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/prompt_radio_button_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radiobutton_yellow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:text="@string/radiobutton_yellow"
            android:textSize="@dimen/ticket_details_font_size" />

        <RadioButton
            android:id="@+id/radiobutton_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/radiobutton_blue"
            android:textColor="@color/white"
            android:textSize="@dimen/ticket_details_font_size" />

        <RadioButton
            android:id="@+id/radiobutton_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/radiobutton_black"
            android:textColor="@color/white"
            android:textSize="@dimen/ticket_details_font_size" />

        <RadioButton
            android:id="@+id/radiobutton_other_license_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/radiobutton_other_license_color"
            android:textSize="@dimen/ticket_details_font_size" />

    </RadioGroup>


</LinearLayout>