<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin"
        android:text="@string/proof_address" />

    <ImageView
        android:id="@+id/mapDetailsImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/image_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin"
        android:text="@string/proof_environment" />

    <ImageView
        android:id="@+id/photo1DetailsImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/image_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin"
        android:text="@string/proof_vehicle" />

    <ImageView
        android:id="@+id/photo2DetailsImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/image_margin" />

    <TextView
        android:id="@+id/proof_notification_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin"
        android:text="@string/proof_notification"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/photo3DetailsImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/image_margin" />
</LinearLayout>